package enums;

/**
 *
 * @author Yousif Hafez
 */
public enum OrderStatus {
    PENDING,
    CONFIRMED,
    OUT_FOR_DELIVERY,
    DELIVERED,
    CANCELLED
}